--- a/Programmers/두_정수_사이의_합.md
+++ b/Programmers/두_정수_사이의_합.md
@@ -1,5 +1,9 @@
+# 두 정수 사이의 합
+
+```python
 def solution(a, b):
       answer = 0
       for i in range(min(a,b), max(a+1,b+1)):
          answer += i
     return answer
+```
