--- a/Programmers/수박수박수박수.md
+++ b/Programmers/수박수박수박수.md
@@ -1,3 +1,6 @@
+# 수박수박수박수
+
+```python
 def solution(n):
      answer = ''
 
@@ -7,3 +10,4 @@ def solution(n):
          else:
              answer += '박'
     return answer
+```
